----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-09-11 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/dutch: small update
    * lang/chinese_simplified: updated, thanks to Simon - simon2san
    * server_privileges.php: bug #1003238, cannot manipulate a username
      like "example@nothost" where the "@" is part of the username

2004-09-10 Alexander M. Turek  <me@derrabus.de>
    * lang/german-*.inc.php: grammar.

2004-09-09 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: bug #1022338: clarify about needed chown -R
      on the scripts (otherwise, problems in PHP safe mode)
    * tbl_change.php: bug #1024434, undefined sql_query when clicking
      on Insert tab from the Insert textfile sub-page

2004-09-07 Marc Delisle  <lem9@users.sourceforge.net>
    * main.php: bug #992211, wrong parameters to 
      PMA_generate_common_hidden_inputs(), thanks to Ryan Schmidt

2004-09-07 Michal Čihař  <michal@cihar.com>
    * calendar.php: Minimal common.lib.php doesn't fix absolute path, so use
      full one (bug #1023444).

2004-09-07 Alexander M. Turek  <me@derrabus.de>
    * main.php: Typo.
    * libraries/sqlparser.data.php: Added keyword "SESSION".

2004-09-06 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.6.0-rc2 released

2004-09-05 Marc Delisle  <lem9@users.sourceforge.net>
    * ldi_table.php: bug #1010652, wrong label,
      thanks to Ryan Schmidt - ryandesign for the patch

2004-09-05 Alexander M. Turek  <me@derrabus.de>
    * libraries/sqlparser.data.php: Parser support for SHOW STORAGE ENGINES and
      SHOW TABLE TYPES.
    * tbl_create.php: Use default tab.
    * tbl_properties.inc.php: Don't offer the BINARY field attribute in
      MySQL 4.1.
    * main.php: Check the privileges of the anonymous user, too.

2004-09-05 Michal Čihař  <michal@cihar.com>
    * Documentation.html: Add information about theme versions and names.

2004-09-04 Alexander M. Turek  <me@derrabus.de>